working on print view.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Ramadan Kalender</h1>
+    <h1>Ramadan Kalender 2025</h1>
     <p id="location">Lade Standort...</p>
     <div id="calendar"></div>
 </body>
